--- a/livestreams/6/index.html
+++ b/livestreams/6/index.html
@@ -51,7 +51,7 @@
     <h3><strong>Disclaimer: These sites do not belong to us, do not enter any personal information. If you have any issues <a href="http://footballify.net/contact">Contact Us</a></strong></h3>
     <h3><strong>Tip: Click on any link then continue to your match. If a link does not work for you, try another link</strong></h3>
         <h1>Paris Saint-Germain VS Troyes</h1>
-        <h2><a class="gamelinks" href="https://mazystreams.xyz/event/2022/ers-sco-vs-bordeau/s6.php" target="_blank">Link 1</a></h2>
+        <h2><a class="gamelinks" href="http://olympicology.com/sports/psg-vs-troyes/" target="_blank">Link 1</a></h2>
         <h2><a class="gamelinks" href="http://bongstreams.com/events/soccer/paris-saint-germain-vs-troyes/" target="_blank">Link 2</a></h2>
         <h2><a class="gamelinks" href="http://olympicology.com/sports/psg-vs-troyes/" target="_blank">Link 3</a></h2>
         <h2><a class="gamelinks" href="http://www.ovostreams.com/events/2022/paris-sg-vs-troyes-s3/" target="_blank">Link 4</a></h2>
