--- a/standings/index.html
+++ b/standings/index.html
@@ -54,8 +54,8 @@
      <nav class="leaguesnav">
         <input type="checkbox" id="click">
         <ul>
-           <li><a class="bottomnav active prem">Premier League</a></li>
-           <li><a class="bottomnav laliga">La Liga</a></li>
+           <li><button class="bottomnav active prem">Premier League</button></li>
+           <li><button class="bottomnav laliga">La Liga</button></li>
            <li><a class="bottomnav bund">Bundesliga</a></li>
            <li><a class="bottomnav seriea">Serie A TIM</a></li>
            <li><a class="bottomnav ligue1">Ligue 1</a></li>
