--- a/standings/ligue1/index.html
+++ b/standings/ligue1/index.html
@@ -63,10 +63,10 @@
         </ul>
      </nav>
      </div>
-<!-- PREMIER LEAGUE  -->
-<div class="p" id="wg-api-football-standings"
+<!-- LIGUE 1  -->
+<div class="lig" class="hidden" id="wg-api-football-standings"
      data-host="v3.football.api-sports.io"
-     data-league="39"
+     data-league="61"
      data-team=""
      data-season="2021"
      data-key="e54f3d3972ca8251c1259694b49948de"
@@ -77,6 +77,5 @@
     type="module"
     src="https://widgets.api-sports.io/football/1.1.8/widget.js">
 </script>
-<script type="text/javascript" src="script.js"></script> 
-</body>
-</html>
+    </body>
+    </html>
