--- a/standings/laliga/index.html
+++ b/standings/laliga/index.html
@@ -54,8 +54,8 @@
      <nav class="leaguesnav">
         <input type="checkbox" id="click">
         <ul>
-           <li><a class="bottomnav active prem" href="footballify.net/standings">Premier League</a></li>
-           <li><a class="bottomnav laliga" href="footballify.net/standings/laliga">La Liga</a></li>
+           <li><a class="bottomnav prem" href="footballify.net/standings">Premier League</a></li>
+           <li><a class="bottomnav active laliga" href="footballify.net/standings/laliga">La Liga</a></li>
            <li><a class="bottomnav bund" href="footballify.net/standings/bundesliga">Bundesliga</a></li>
            <li><a class="bottomnav seriea" href="footballify.net/standings/seriea">Serie A TIM</a></li>
            <li><a class="bottomnav ligue1" href="footballify.net/standings/ligue1">Ligue 1</a></li>
