--- a/standings/ligue1/index.html
+++ b/standings/ligue1/index.html
@@ -54,11 +54,11 @@
      <nav class="leaguesnav">
         <input type="checkbox" id="click">
         <ul>
-           <li><a class="bottomnav active prem" href="footballify.net/standings">Premier League</a></li>
+           <li><a class="bottomnav prem" href="footballify.net/standings">Premier League</a></li>
            <li><a class="bottomnav laliga" href="footballify.net/standings/laliga">La Liga</a></li>
            <li><a class="bottomnav bund" href="footballify.net/standings/bundesliga">Bundesliga</a></li>
            <li><a class="bottomnav seriea" href="footballify.net/standings/seriea">Serie A TIM</a></li>
-           <li><a class="bottomnav ligue1" href="footballify.net/standings/ligue1">Ligue 1</a></li>
+           <li><a class="bottomnav active ligue1" href="footballify.net/standings/ligue1">Ligue 1</a></li>
            <li><a class="bottomnav ucl" href="footballify.net/standings/ucl">UEFA Champions League</a></li>
         </ul>
      </nav>
