--- a/standings/ucl/index.html
+++ b/standings/ucl/index.html
@@ -54,12 +54,12 @@
      <nav class="leaguesnav">
         <input type="checkbox" id="click">
         <ul>
-           <li><a class="bottomnav prem" href="footballify.net/standings">Premier League</a></li>
-           <li><a class="bottomnav laliga" href="footballify.net/standings/laliga">La Liga</a></li>
-           <li><a class="bottomnav bund" href="footballify.net/standings/bundesliga">Bundesliga</a></li>
-           <li><a class="bottomnav seriea" href="footballify.net/standings/seriea">Serie A TIM</a></li>
-           <li><a class="bottomnav ligue1" href="footballify.net/standings/ligue1">Ligue 1</a></li>
-           <li><a class="bottomnav active ucl" href="footballify.net/standings/ucl">UEFA Champions League</a></li>
+           <li><a class="bottomnav prem" href="http://footballify.net/standings">Premier League</a></li>
+           <li><a class="bottomnav laliga" href="http://footballify.net/standings/laliga">La Liga</a></li>
+           <li><a class="bottomnav bund" href="http://footballify.net/standings/bundesliga">Bundesliga</a></li>
+           <li><a class="bottomnav seriea" href="http://footballify.net/standings/seriea">Serie A TIM</a></li>
+           <li><a class="bottomnav ligue1" href="http://footballify.net/standings/ligue1">Ligue 1</a></li>
+           <li><a class="bottomnav active ucl" href="http://footballify.net/standings/ucl">UEFA Champions League</a></li>
         </ul>
      </nav>
      </div>
