--- a/standings/laliga/index.html
+++ b/standings/laliga/index.html
@@ -59,7 +59,7 @@
            <li><a class="bottomnav bund" href="http://footballify.net/standings/bundesliga">Bundesliga</a></li>
            <li><a class="bottomnav seriea" href="http://footballify.net/standings/seriea">Serie A TIM</a></li>
            <li><a class="bottomnav ligue1" href="http://footballify.net/standings/ligue1">Ligue 1</a></li>
-           <li><a class="bottomnav ucl" href="http://http://footballify.net/standings/ucl">UEFA Champions League</a></li>
+           <li><a class="bottomnav ucl" href="http://footballify.net/standings/ucl">UEFA Champions League</a></li>
         </ul>
      </nav>
      </div>
