--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5336766819536959"
      crossorigin="anonymous"></script>
         
-
+        <meta name="description"
+              content="Official Football Live Score and Match Live Streaming Website With Links">
         <meta charset="utf-8">
         <link rel="stylesheet" href="api-football.css">
         <title>Footballify</title>
