--- a/standings/seriea/index.html
+++ b/standings/seriea/index.html
@@ -64,8 +64,7 @@
      </nav>
      </div>
 <!-- SERIE A -->
-<div style="width: 500px;"
-     class="s" class="hidden" id="wg-api-football-standings"
+<div id="wg-api-football-standings"
      data-host="v3.football.api-sports.io"
      data-league="135"
      data-team=""
