--- a/index.html
+++ b/index.html
@@ -67,7 +67,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         data-key = "e54f3d3972ca8251c1259694b49948de"
         data-theme="false"
         data-show-errors="false"
-        class="api_football_loader">    
+        class="api_football_loader"
+        style="border-radius: 3px;border-color: black;border: solid;">    
+        
 </div>
 <script
         type="module"
