--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         data-theme="false"
         data-show-errors="false"
         class="api_football_loader"
-        style="border-radius: 3px;border-color: #5fbd46;border: solid;">    
+        style="border: 3px solid #5fbd46;">    
         
 </div>
 <script
