--- a/livestreams/1/index.html
+++ b/livestreams/1/index.html
@@ -59,14 +59,14 @@
     <h3><strong>Tip: Click on any link then continue to your match. If a link does not work for you, try another link</strong></h3>
 
     <h1>Valencia VS Real Betis</h1>
-    <h2><a class="gamelinks" href="" target="_blank">Link 1</a></h2>
-    <h2><a class="gamelinks" href="" target="_blank">Link 2</a></h2>
-    <h2><a class="gamelinks" href="" target="_blank">Link 3</a></h2>
-    <h2><a class="gamelinks" href="" target="_blank">Link 4</a></h2>
-    <h2><a class="gamelinks" href="" target="_blank">Link 5</a></h2>
-    <h2><a class="gamelinks" href="" target="_blank">Link 6</a></h2>
-    <h2><a class="gamelinks" href="" target="_blank">Link 7</a></h2>
-    <h2><a class="gamelinks" href="" target="_blank">Link 8</a></h2>
-    <h2><a class="gamelinks" href="" target="_blank">Link 9</a></h2>
-    <h2><a class="gamelinks" href="" target="_blank">Link 10</a></h2>
+    <h2><a class="gamelinks" href="https://mazystreams.xyz/event/2022/alencia-vs-real-b/s2.php" target="_blank">Link 1</a></h2>
+    <h2><a class="gamelinks" href="http://www.ovostreams.com/events/2022/valencia-vs-real-betis-s2/" target="_blank">Link 2</a></h2>
+    <h2><a class="gamelinks" href="http://streamspass.live/soccer/stream2/?moment=10&match=Valencia-vs-Real-Betis" target="_blank">Link 3</a></h2>
+    <h2><a class="gamelinks" href="https://hockeynews.club/alencia-vs-real-b/" target="_blank">Link 4</a></h2>
+    <h2><a class="gamelinks" href="https://manunitedlivestream.com/hd-live-2/" target="_blank">Link 5</a></h2>
+    <h2><a class="gamelinks" href="https://socolive.pro/live-football-stream-1.html" target="_blank">Link 6</a></h2>
+    <h2><a class="gamelinks" href="https://nowagoal2.xyz/page/Vitoriatv.php" target="_blank">Link 7</a></h2>
+    <h2><a class="gamelinks" href="http://tvtoss.club/buffer/newyork-knicks.php" target="_blank">Link 8</a></h2>
+    <h2><a class="gamelinks" href="http://tvtoss.club/buffer/newyork-knicks.php" target="_blank">Link 9</a></h2>
+    <h2><a class="gamelinks" href="http://tvtoss.club/buffer/newyork-knicks.php" target="_blank">Link 10</a></h2>
 </div>
