--- a/livestreams/index.html
+++ b/livestreams/index.html
@@ -50,9 +50,9 @@
 <div class="streamlist">
     <h3><strong>Choose a Game to Watch (Links will be up 30 minutes before kick-off)</strong></h3>
     <h1 class="games"><a href="http://footballify.net/livestreams/1">Valencia VS Real Betis</a></hi>
-    <h1 class="games"><a href="http://footballify.net/livestreams/2"></a>Granada VS Athletic Club</h1>
-    <h1 class="games"><a href="http://footballify.net/livestreams/3"></a>Aston Villa FC VS Liverpool FC</h1>
-    <h1 class="games"><a href="http://footballify.net/livestreams/4"></a>FC Barcelona VS Celta de Vigo</h1>
+    <h1 class="games"><a href="http://footballify.net/livestreams/2">Granada VS Athletic Club</a></h1>
+    <h1 class="games"><a href="http://footballify.net/livestreams/3">Aston Villa FC VS Liverpool FC</a></h1>
+    <h1 class="games"><a href="http://footballify.net/livestreams/4">FC Barcelona VS Celta de Vigo</a></h1>
     <h1 class="games"><a href="http://footballify.net/livestreams/"></a></h1>
     <h1 class="games"><a href="http://footballify.net/livestreams/"></a></h1>
     <!-- <h1 class="games"><a href="http://footballify.net/livestreams/7">Game 7</a></h1>
