--- a/livestreams/index.html
+++ b/livestreams/index.html
@@ -18,8 +18,8 @@
         <meta name="msapplication-TileColor" content="#da532c">
         <meta name="theme-color" content="#ffffff">
 
-        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5336766819536959"
-                crossorigin="anonymous"></script>
+        <!-- <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5336766819536959"
+                crossorigin="anonymous"></script> -->
         <meta charset="utf-8">
         <link rel="stylesheet" href="api-football.css">
         <title>Footballify</title>
