--- a/livestreams/6/index.html
+++ b/livestreams/6/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>    
+        <script>(function(s,u,z,p){s.src=u,s.setAttribute('data-zone',z),p.appendChild(s);})(document.createElement('script'),'https://inklinkor.com/tag.min.js',5081525,document.body||document.documentElement)</script>
         <!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
     new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
