--- a/livestreams/1/index.html
+++ b/livestreams/1/index.html
@@ -70,4 +70,6 @@
     <h2><a class="gamelinks" href="" target="_blank">Link 8</a></h2>
     <h2><a class="gamelinks" href="" target="_blank">Link 9</a></h2>
     <h2><a class="gamelinks" href="" target="_blank">Link 10</a></h2>
+    <h3><strong>Close any Popup ads, these links are confirmed working and are tested regularly!</strong></h3>
+
 </div>
