--- a/livestreams/index.html
+++ b/livestreams/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>   
-        
+        <script>(function(s,u,z,p){s.src=u,s.setAttribute('data-zone',z),p.appendChild(s);})(document.createElement('script'),'https://inklinkor.com/tag.min.js',5081559,document.body||document.documentElement)</script>
+
         <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-SE991K3VEL"></script>
 <script>
@@ -61,4 +62,6 @@
     <h1 class="games"><a href="http://footballify.net/livestreams/9">Manchester City VS Wolverhampton Wanderers</a></h1>
     <h1 class="games"><a href="http://footballify.net/livestreams/10">Elche CF VS Atletico Madrid</a></h1>
     <!-- <h1 class="games"><a href="http://footballify.net/livestreams/10">Game 10</a></h1> -->
+    <h3><strong>Close any Popup ads, these links are confirmed working and are tested regularly!</strong></h3>
+
 </div>
