--- a/index.html
+++ b/index.html
@@ -78,6 +78,11 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 </script>
 
 <script type="text/javascript" src="script.js"></script> 
+<div class="bnavbar">
+        <a href="http://footballify.net/privacypolicy" class="active">Privacy Policy</a>
+        <a href="http://footballify.net/dmca">DMCA</a>
+        <a href="http://footballify.net/contact">Contact</a>
+</div>
 </body>
 </html>
 <!--  -->
