--- a/dmca/index.html
+++ b/dmca/index.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <script>(function(s,u,z,p){s.src=u,s.setAttribute('data-zone',z),p.appendChild(s);})(document.createElement('script'),'https://inklinkor.com/tag.min.js',5081525,document.body||document.documentElement)</script>
+    <head>      
         <!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
     new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
     j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
     })(window,document,'script','dataLayer','GTM-W92CG5R');</script>
-    <!-- End Google Tag Manager --> 
+    <!-- End Google Tag Manager -->
         <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-SE991K3VEL"></script>
 <script>
@@ -17,7 +16,7 @@
   gtag('js', new Date());
 
   gtag('config', 'G-SE991K3VEL');
-</script>     
+</script>
         <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
         <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
@@ -49,26 +48,13 @@
            <li><a href="http://footballify.net">Football Scores</a></li>
            <li><a href="http://footballify.net">Standings</a></li>
            <li><a href="#">Stats</a></li>
-           <li><a class="active" href="http://footballify.net/livestreams">Live Streams</a></li>
-           <li><a href="http://footballify.net/contact">Contact</a></li>
+           <li><a href="http://footballify.net/livestreams">Live Streams</a></li>
+           <li><a class="active" href="http://footballify.net/contact">Contact</a></li>
         </ul>
      </nav>
 </div>
 
-<div class="adflylinks">
-    <h3><strong>Disclaimer: These sites do not belong to us, do not enter any personal information. If you have any issues <a href="http://footballify.net/contact">Contact Us</a></strong></h3>
-    <h3><strong>Tip: Click on any link then continue to your match. If a link does not work for you, try another link</strong></h3>
-    <h1>Leicester City VS Norwich City</h1>
-    <h2><a class="gamelinks" href="https://manunitedlivestream.com/hd-live-2/" target="_blank">Link 1</a></h2>
-    <h2><a class="gamelinks" href="http://www.ovostreams.com/events/2022/leicester-vs-norwich-s2/" target="_blank">Link 2</a></h2>
-    <h2><a class="gamelinks" href="" target="_blank">Link 3</a></h2>
-    <h2><a class="gamelinks" href="" target="_blank">Link 4</a></h2>
-    <h2><a class="gamelinks" href="" target="_blank">Link 5</a></h2>
-    <h2><a class="gamelinks" href="" target="_blank">Link 6</a></h2>
-    <h2><a class="gamelinks" href="https://manunitedlivestream.com/hd-live-2/" target="_blank">Link 7</a></h2>
-    <h2><a class="gamelinks" href="https://manunitedlivestream.com/hd-live-2/" target="_blank">Link 8</a></h2>
-    <h2><a class="gamelinks" href="https://manunitedlivestream.com/hd-live-2/" target="_blank">Link 9</a></h2>
-    <h2><a class="gamelinks" href="https://manunitedlivestream.com/hd-live-2/" target="_blank">Link 10</a></h2>
-    <h3><strong>Close any Popup ads, these links are confirmed working and are tested regularly!</strong></h3>
-
+<div class="contactpage">
+    <h1 class="contacttext"><strong>Contact US</strong></h1>
+    <h4 class="contacttext">If you have any questions, inquiries or requests, email us at abbaskazmi2005@footballify.net</h4>
 </div>
