--- a/contact/index.html
+++ b/contact/index.html
@@ -49,7 +49,7 @@
            <li><a href="http://footballify.net">Standings</a></li>
            <li><a href="#">Stats</a></li>
            <li><a href="http://footballify.net/livestreams">Live Streams</a></li>
-           <li><a class="active" href="http://footballify.net/contact">Contact</a></li>
+           <li><a href="http://footballify.net/contact">Contact</a></li>
         </ul>
      </nav>
 </div>
