--- a/livestreams/1/index.html
+++ b/livestreams/1/index.html
@@ -73,3 +73,9 @@
     <h3><strong>Close any Popup ads, these links are confirmed working and are tested regularly!</strong></h3>
 
 </div>
+<div class="bnavbar">
+    <a href="http://footballify.net/privacypolicy" class="active">Privacy Policy</a>
+    <a href="http://footballify.net/dmca" class="active" >DMCA</a>
+    <a href="http://footballify.net/contact" class="active">Contact</a>
+</div>
+</body>
