--- a/livestreams/10/index.html
+++ b/livestreams/10/index.html
@@ -70,5 +70,9 @@
         <h2><a class="gamelinks" href="" target="_blank">Link 9</a></h2>
         <h2><a class="gamelinks" href="" target="_blank">Link 10</a></h2>
         <h3><strong>Close any Popup ads, these links are confirmed working and are tested regularly!</strong></h3>
-
+        <div class="bnavbar">
+            <a href="http://footballify.net/privacypolicy" class="active">Privacy Policy</a>
+            <a href="http://footballify.net/dmca" class="active" >DMCA</a>
+            <a href="http://footballify.net/contact" class="active">Contact</a>
+    </div>
 </div>
