--- a/livestreams/index.html
+++ b/livestreams/index.html
@@ -61,5 +61,9 @@
     <h1 class="games"><a href="http://footballify.net/livestreams/10">Elche CF VS Atletico Madrid</a></h1>
     <h1 class="games"><a href="http://footballify.net/livestreams/11">Juventus VS Inter Milan</a></h1>
     <h3><strong>Close any Popup ads, these links are confirmed working and are tested regularly!</strong></h3>
-
+<div class="bnavbar">
+        <a href="http://footballify.net/privacypolicy" class="active">Privacy Policy</a>
+        <a href="http://footballify.net/dmca" class="active" >DMCA</a>
+        <a href="http://footballify.net/contact" class="active">Contact</a>
+</div>
 </div>
