--- a/standings/index.html
+++ b/standings/index.html
@@ -72,5 +72,10 @@
 
 </script>
 <script type="text/javascript" src="script.js"></script> 
+<div class="bnavbar">
+    <a href="http://footballify.net/privacypolicy" class="active">Privacy Policy</a>
+    <a href="http://footballify.net/dmca" class="active" >DMCA</a>
+    <a href="http://footballify.net/contact" class="active">Contact</a>
+</div>
 </body>
 </html>
