--- a/contact/index.html
+++ b/contact/index.html
@@ -58,3 +58,4 @@
     <h1 class="contacttext"><strong>Contact US</strong></h1>
     <h4 class="contacttext">If you have any questions, inquiries or requests, email us at abbaskazmi2005@footballify.net</h4>
 </div>
+</body>
