--- a/dmca/index.html
+++ b/dmca/index.html
@@ -54,7 +54,32 @@
      </nav>
 </div>
 
-<div class="contactpage">
-    <h1 class="contacttext"><strong>Contact US</strong></h1>
-    <h4 class="contacttext">If you have any questions, inquiries or requests, email us at abbaskazmi2005@footballify.net</h4>
+<div class="dmca">
+    <h1 class="dmcatext"><strong>DMCA Notice</strong></h1>
+    <h1 class="dmcatext">DMCA Notice
+    <strong>Digital Millennium Copyright Act (DMCA) Notice.</strong>
+        We respect copyright. If you find that anything is wrong, please send an email with all the details to the attention of “Copyright Infringement” via our contact page.</h4>
+    <h1 class="dmcatext">Filing a DMCA Notice to Remove Copyright-Protected Content
+        If you believe in good faith that your work has been copied in a way that constitutes copyright infringement, please provide us with a written notice containing the following information:
+        
+        <strong>Your name, address, telephone number, and email address (if any);</strong>
+        A description of the copyrighted work that you claim has been infringed;
+        A description of where on the Website the material that you claim is infringing may be found, sufficient for sportsnewsunfiltered.com to locate the material (e.g., the URL);
+        A statement that you have a good faith belief that the use of the copyrighted work is not authorised by the copyright sportsnewsunfiltered.com, its agent, or the law and is not a fair use;
+        A statement by you UNDER PENALTY OF PERJURY that the information in your notice is accurate and that you are the copyright owner or authorized to act on the copyright owner’s behalf; and
+        Your electronic or physical signature.
+        Filing a DMCA Counter-Notice to Restore Content Removed from the Website
+        If you believe that your material has been removed by mistake or misidentified, please provide sportsnewsunfiltered.com with a written counter-notification containing the following information:
+        
+        <strong>Your name, address, telephone number, and email address (if any);</strong>
+        A description of the material that was removed and the location on the Website (e.g., the URL) where it previously appeared;
+        A statement UNDER PENALTY OF PERJURY that you have a good faith belief that the material was removed or disabled as a result of mistake or misidentification;
+        A statement that you consent to the jurisdiction of the Federal District Court for the judicial district in which your address is located, or if your address is outside of the United States, any judicial district in which sportsnewsunfiltered.com may be found (which includes the United States District Court for the Southern District of New York), and that you will accept service of process from the person who filed the original DMCA notice or an agent of that person; and
+        Your electronic or physical signature.</h4>
 </div>
+<div class="bnavbar">
+    <a href="http://footballify.net/privacypolicy" class="active">Privacy Policy</a>
+    <a href="http://footballify.net/dmca" class="active" >DMCA</a>
+    <a href="http://footballify.net/contact" class="active">Contact</a>
+</div>
+</body>
