--- a/livestreams/9/index.html
+++ b/livestreams/9/index.html
@@ -69,5 +69,9 @@
         <h2><a class="gamelinks" href="http://www.ovostreams.com/events/2022/wolverhampton-vs-manchester-city-s4/" target="_blank">Link 9</a></h2>
         <h2><a class="gamelinks" href="https://manunitedlivestream.com/hd-live-4/" target="_blank">Link 10</a></h2>
         <h3><strong>Close any Popup ads, these links are confirmed working and are tested regularly!</strong></h3>
-
+        <div class="bnavbar">
+            <a href="http://footballify.net/privacypolicy" class="active">Privacy Policy</a>
+            <a href="http://footballify.net/dmca" class="active" >DMCA</a>
+            <a href="http://footballify.net/contact" class="active">Contact</a>
+    </div>
 </div>
