--- a/privacypolicy/index.html
+++ b/privacypolicy/index.html
@@ -54,7 +54,13 @@
      </nav>
 </div>
 
-<div class="contactpage">
-    <h1 class="contacttext"><strong>Contact US</strong></h1>
-    <h4 class="contacttext">If you have any questions, inquiries or requests, email us at abbaskazmi2005@footballify.net</h4>
+<div class="privacypage">
+    <h1 class="privacytext"><strong>Privacy Policy</strong></h1>
+    <h4 class="privacytext">Currently we only collect analytical data.</h4>
 </div>
+<div class="bnavbar">
+    <a href="http://footballify.net/privacypolicy" class="active">Privacy Policy</a>
+    <a href="http://footballify.net/dmca" class="active" >DMCA</a>
+    <a href="http://footballify.net/contact" class="active">Contact</a>
+</div>
+</body>
