--- a/contact/index.html
+++ b/contact/index.html
@@ -58,4 +58,9 @@
     <h1 class="contacttext"><strong>Contact US</strong></h1>
     <h4 class="contacttext">If you have any questions, inquiries or requests, email us at abbaskazmi2005@footballify.net</h4>
 </div>
+<div class="bnavbar">
+    <a href="http://footballify.net/privacypolicy" class="active">Privacy Policy</a>
+    <a href="http://footballify.net/dmca" class="active" >DMCA</a>
+    <a href="http://footballify.net/contact" class="active">Contact</a>
+</div>
 </body>
