--- a/livestreams/2/index.html
+++ b/livestreams/2/index.html
@@ -60,8 +60,8 @@
     <h3><strong>Tip: Click on any link then continue to your match. If a link does not work for you, try another link</strong></h3>
     <h1>Osasuna VS Getafe</h1>
     <h2><a class="gamelinks" href="https://manunitedlivestream.com/hd-live-6/" target="_blank">Link 1</a></h2>
-    <h2><a class="gamelinks" href="" target="_blank">Link 2</a></h2>
-    <h2><a class="gamelinks" href="" target="_blank">Link 3</a></h2>
+    <h2><a class="gamelinks" href="https://mazystreams.xyz/event/2022/asuna-vs-ge/s6.php" target="_blank">Link 2</a></h2>
+    <h2><a class="gamelinks" href="http://hockeyweb.live/daily/totalsports/italy11/" target="_blank">Link 3</a></h2>
     <h2><a class="gamelinks" href="https://manunitedlivestream.com/hd-live-6/" target="_blank">Link 4</a></h2>
     <h2><a class="gamelinks" href="https://manunitedlivestream.com/hd-live-6/" target="_blank">Link 5</a></h2>
     <h2><a class="gamelinks" href="https://manunitedlivestream.com/hd-live-6/" target="_blank">Link 6</a></h2>
