--- a/livestreams/index.html
+++ b/livestreams/index.html
@@ -49,9 +49,9 @@
 
 <div class="streamlist">
     <h3><strong>Choose a Game to Watch (Links will be up 30 minutes before kick-off)</strong></h3>
-    <h1 class="games"><a href="http://footballify.net/livestreams/1">Deportivo Alaves VS Espanyol</a></hi>
-    <h1 class="games"><a href="http://footballify.net/livestreams/2">Osasuna VS Getafe</a></h1>
-    <h1 class="games"><a href="http://footballify.net/livestreams/3">OGC Nice VS St. Etienne</a></h1>
+    <h1 class="games" class="live"><a href="http://footballify.net/livestreams/1">Deportivo Alaves VS Espanyol</a></hi>
+    <h1 class="games" class="live"><a href="http://footballify.net/livestreams/2">Osasuna VS Getafe</a></h1>
+    <h1 class="games" class="live"><a href="http://footballify.net/livestreams/3">OGC Nice VS St. Etienne</a></h1>
     <h1 class="games"><a href="http://footballify.net/livestreams/4">Leeds United VS Chelsea FC</a></h1>
     <h1 class="games"><a href="http://footballify.net/livestreams/5">Leicester City VS Norwich City</a></h1>
     <h1 class="games"><a href="http://footballify.net/livestreams/6">Watford FC VS Everton FC</a></h1>
