--- a/livestreams/6/index.html
+++ b/livestreams/6/index.html
@@ -61,10 +61,10 @@
         <h1>Watford FC VS Everton FC</h1>
         <h2><a class="gamelinks" href="https://manunitedlivestream.com/hd-live-3/" target="_blank">Link 1</a></h2>
         <h2><a class="gamelinks" href="http://www.ovostreams.com/events/2022/watford-vs-everton-s3/" target="_blank">Link 2</a></h2>
-        <h2><a class="gamelinks" href="" target="_blank">Link 3</a></h2>
+        <h2><a class="gamelinks" href="https://ripple-stream.com/tford-vs-evert/" target="_blank">Link 3</a></h2>
         <h2><a class="gamelinks" href="" target="_blank">Link 4</a></h2>
         <h2><a class="gamelinks" href="" target="_blank">Link 5</a></h2>
-        <h2><a class="gamelinks" href="" target="_blank">Link 6</a></h2>
+        <h2><a class="gamelinks" href="https://ripple-stream.com/tford-vs-evert/" target="_blank">Link 6</a></h2>
         <h2><a class="gamelinks" href="https://manunitedlivestream.com/hd-live-3/" target="_blank">Link 7</a></h2>
         <h2><a class="gamelinks" href="https://manunitedlivestream.com/hd-live-3/" target="_blank">Link 8</a></h2>
         <h2><a class="gamelinks" href="https://manunitedlivestream.com/hd-live-3/" target="_blank">Link 9</a></h2>
