--- a/livestreams/9/index.html
+++ b/livestreams/9/index.html
@@ -61,10 +61,10 @@
         <h1>Manchester City VS Wolverhampton Wanderers</h1>
         <h2><a class="gamelinks" href="https://manunitedlivestream.com/hd-live-4/" target="_blank">Link 1</a></h2>
         <h2><a class="gamelinks" href="http://www.ovostreams.com/events/2022/wolverhampton-vs-manchester-city-s4/" target="_blank">Link 3</a></h2>
-        <h2><a class="gamelinks" href="https://manunitedlivestream.com/hd-live-4/" target="_blank">Link 4</a></h2>
+        <h2><a class="gamelinks" href="https://ripple-stream.com/hampton-wanderers-vs-manch/" target="_blank">Link 4</a></h2>
         <h2><a class="gamelinks" href="https://manunitedlivestream.com/hd-live-4/" target="_blank">Link 5</a></h2>
         <h2><a class="gamelinks" href="https://manunitedlivestream.com/hd-live-4/" target="_blank">Link 6</a></h2>
-        <h2><a class="gamelinks" href="https://manunitedlivestream.com/hd-live-4/" target="_blank">Link 7</a></h2>
+        <h2><a class="gamelinks" href="https://ripple-stream.com/hampton-wanderers-vs-manch/" target="_blank">Link 7</a></h2>
         <h2><a class="gamelinks" href="https://manunitedlivestream.com/hd-live-4/" target="_blank">Link 8</a></h2>
         <h2><a class="gamelinks" href="http://www.ovostreams.com/events/2022/wolverhampton-vs-manchester-city-s4/" target="_blank">Link 9</a></h2>
         <h2><a class="gamelinks" href="https://manunitedlivestream.com/hd-live-4/" target="_blank">Link 10</a></h2>
