--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <ul>
        <li><a class="active" href="http://footballify.net/livescores">Football Scores</a></li>
        <li><a href="http://footballify.net/standings">Standings</a></li>
-       <li><a href="#">News</a></li>
+       <li><a class ="active" href="#">News</a></li>
        <li><a href="http://footballify.net/livestreams">Live Streams</a></li>
        <li><a href="http://footballify.net/contact">Contact</a></li>
     </ul>
