--- a/livestreams/1/index.html
+++ b/livestreams/1/index.html
@@ -46,10 +46,10 @@
         <i class="fas fa-bars"></i>
         </label>
         <ul>
-           <li><a href="http://footballify.net">Football Scores</a></li>
-           <li><a href="http://footballify.net">Standings</a></li>
-           <li><a href="#">Stats</a></li>
-           <li><a class="active" href="http://footballify.net/livestreams">Live Streams</a></li>
+            <li><a href="http://footballify.net/home">News</a></li>
+           <li><a href="http://footballify.net/livescores">Football Scores</a></li>
+           <li><a href="http://footballify.net/standings">Standings</a></li>
+           <li><a href="http://footballify.net/livestreams">Live Streams</a></li>
            <li><a href="http://footballify.net/contact">Contact</a></li>
         </ul>
      </nav>
