--- a/livescores/index.html
+++ b/livescores/index.html
@@ -45,9 +45,9 @@
         <i class="fas fa-bars"></i>
         </label>
         <ul>
+           <li><a href="http://footballify.net/home">News</a></li>
            <li><a href="http://footballify.net/livescores">Football Scores</a></li>
            <li><a href="http://footballify.net/standings">Standings</a></li>
-           <li><a href="#">Stats</a></li>
            <li><a href="http://footballify.net/livestreams">Live Streams</a></li>
            <li><a href="http://footballify.net/contact">Contact</a></li>
         </ul>
