--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       <div class="row">
         <div class="leftcolumn">
           <div class="card">
-            <h2>TITLE HEADING</h2>
-            <h5>Title description, Dec 7, 2017</h5>
-            <div class="fakeimg" style="height:200px;">Image</div>
+            <h2>DAILY FOOTBALL UPDATE</h2>
+            <h5>Footballify, May 12, 2022</h5>
+            <div class="fakeimg" style="height:200px;"><img src="https://i0.wp.com/conteudo.imguol.com.br/c/esporte/60/2022/05/11/kevin-de-bruyne-marca-tres-gols-em-jogo-contra-o-wolverhampton-pelo-campeonato-ingles-1652299566390_v2_750x421.jpg?resize=750%2C421&ssl=1"> </div>
             <p>Some text..</p>
           </div>
           <div class="card">
@@ -75,19 +75,13 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         </div>
         <div class="rightcolumn">
           <div class="card">
-            <h2>About Me</h2>
-            <div class="fakeimg" style="height:100px;">Image</div>
-            <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
+            <h2>Match Of The Day</h2>
+            <div class="fakeimg" style="height:100px;"><img src=""></div>
+            <p>Tottenham Hotspur VS Arsenal FC</p>
           </div>
           <div class="card">
             <h3>Popular Post</h3>
-            <div class="fakeimg">Image</div><br>
-            <div class="fakeimg">Image</div><br>
-            <div class="fakeimg">Image</div>
-          </div>
-          <div class="card">
-            <h3>Follow Me</h3>
-            <p>Some text..</p>
+           <h4>somth</h4>
           </div>
         </div>
       </div>
