--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           <div class="card">
             <h2>DAILY FOOTBALL UPDATE</h2>
             <h5>Footballify, May 12, 2022</h5>
-            <div class="fakeimg" style="height:200px;"><img src="https://i0.wp.com/conteudo.imguol.com.br/c/esporte/60/2022/05/11/kevin-de-bruyne-marca-tres-gols-em-jogo-contra-o-wolverhampton-pelo-campeonato-ingles-1652299566390_v2_750x421.jpg?resize=750%2C421&ssl=1"> </div>
+            <img src="https://i0.wp.com/conteudo.imguol.com.br/c/esporte/60/2022/05/11/kevin-de-bruyne-marca-tres-gols-em-jogo-contra-o-wolverhampton-pelo-campeonato-ingles-1652299566390_v2_750x421.jpg?resize=750%2C421&ssl=1">
             <p>Some text..</p>
           </div>
           <div class="card">
